deploy/dev/web-ui/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-ui-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: web-ui
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {} # Permite de qualquer pod no mesmo namespace
  egress:
  - to:
    - podSelector: {} # Permite para qualquer pod no mesmo namespace
